# app_extract_info

./: .gitignore  Cargo.toml
extract/: Cargo.toml
extract/src/: apk.rs  error.rs  ipa.rs  lib.rs  main.rs
extract/src/manifest/: apk.rs  ipa.rs  mod.rs
main/: Cargo.toml
main/src/: holder.rs  main.rs  meta.rs
