[package]
name = "app_extract_info"
version = "0.1.0"
authors = ["fireyy zhu <fireyy@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zip = "0.6.2"
serde = { version = "1.0.137", features = ["derive"] }
plist = "1.3.1"
axmldecoder = "0.4.0"
xml-rs = "0.8"
thiserror = "1.0.31"