[package]
name = "app_main"
version = "0.1.0"
authors = ["fireyy zhu <fireyy@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = { version = "0.19.0", features = ["dark-light", "persistence"] }
egui = "0.19.0"
egui_extras = { version = "0.19.0", features = ["image"] }
image = { version = "0.24.3", default-features = false, features = ["png"] }
rfd = "0.10"
app_extract_info = { path = "../extract" }
base64 = "0.13.0"

[profile.dev.package.eframe]
opt-level = 3

[profile.dev.package.epaint]
opt-level = 3

[profile.dev.package.egui]
opt-level = 3

[profile.dev.package.egui_extras]
opt-level = 3

[profile.dev.package.egui-winit]
opt-level = 3

[profile.dev.package.egui_glow]
opt-level = 3

[profile.dev.package.image]
opt-level = 3